--- a/styles.scss
+++ b/styles.scss
@@ -115,7 +115,7 @@ section {
 
 
 /* PAGE 1 - HOME */
-#home-page {
+#home {
     background-color: $maindark;
 }
 
@@ -178,7 +178,7 @@ h2 {
 
 
 /* PAGE 2 - PROJECTS */
-#project-page {
+#projects {
     background-color: $maindark;
     border-top: 3px solid $mainaccent;
 }
@@ -200,7 +200,7 @@ h3 {
     grid-template-rows: 1fr 1fr;
     height: 80%;
 
-    a {
+    div {
         position: relative;
         margin: auto;
         background-color: black;
@@ -210,13 +210,13 @@ h3 {
         border-radius: 5px;
         text-decoration: none;
 
-        p {
+        section {
             height: 70%;
             width: 70%;
             background-color: $mainlight;
             margin: auto auto;
             border-radius: 2px;
-            opacity: .8;
+            border: 3px solid black;
             color: $maindark;
             text-align: center;
             justify-content: center;
@@ -224,25 +224,58 @@ h3 {
             flex-direction: column;
             font-size: 16px;
             font-weight: bold;
-            cursor: pointer;
+
+            h4 {
+                font-size: 22px;
+                padding: 2px;
+                text-decoration: underline;
+            }
+            i {
+                font-size: 28px;
+                color: $mainaccent;
+                background-color: black;
+                padding: 5px;
+                border-radius: 5px;
+            }
         }
     }
 
     .box1 {
         width: 325px;
         height: 325px;
-        
     }
     .box2 {
         width: 375px;
         height: 375px;
     }
+    // #rickandmorty {
+
+    // }
+    // #no1se {
+
+    // }
+    // #footballteam {
+
+    // }
+    #gungame {
+        background-image: url(./images/gungame.png);
+        background-size: 200% 100%;
+        background-position: center;
+    }
+    #morsecode {
+        background-image: url(./images/morsecode.png);
+        background-size: 200% 100%;
+        background-position: center;
+    }
+    // #raptrumps {
+
+    // }
 }
 
 
 
 /* PAGE 3 - ABOUT */
-#about-page {
+#about {
     background-color: #def3fd;
 }
 
@@ -272,7 +305,7 @@ h3 {
 
 
 /* PAGE 4 - SKILLS */
-#skills-page {
+#skills {
     background-color: #FFDAC1;
 }
 
@@ -325,7 +358,7 @@ h3 {
 
 
 /* PAGE 5 - CONTACT */
-#contact-page {
+#contact {
     background-color: #DEFDE0;
 }
 
@@ -435,6 +468,7 @@ footer {
     margin-bottom: -2px;
 }
 
+// MEDIA QUERIES
 
 @media only screen and (max-width: 1675px) {
     .page-head {
@@ -503,6 +537,16 @@ footer {
         padding: 0 100px 0 30px;
     }
     .pro-grid {
+        div {
+            section {
+                h4 {
+                    font-size: 14px;
+                }
+                p {
+                    font-size: 12px;
+                }
+            }
+        }
         .box1 {
             width: 275px;
             height: 275px;
@@ -627,6 +671,16 @@ footer {
         bottom: 43%;
     }
     .pro-grid {
+        div {
+            section {
+                h4 {
+                    font-size: 12px;
+                }
+                p {
+                    font-size: 10px;
+                }
+            }
+        }
         .box1 {
             width: 225px;
             height: 225px;
@@ -723,7 +777,7 @@ footer {
     }
         i.active {
             margin-top: -1.1px;
-}}}
+    }}}
     
     .pro-grid {
         width: 90%;
@@ -732,6 +786,19 @@ footer {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         height: 85%;
+        div {
+            section {
+                p {
+                    display: none;
+                }
+                h4 {
+                    font-size: 24px;
+                }
+                i {
+                    font-size: 32px;
+                }
+            }
+        }
         .box1 {
             width: 250px;
             height: 250px;
@@ -935,25 +1002,82 @@ footer {
 
 @media only screen and (max-width: 543px) {
     .nav {
+        padding: 0 20px;
         a {
-            font-size: 20;
+            font-size: 17px;
+            margin-top: 8px;
     }}
+    h1 {
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 34px;
+        bottom: 16%;
+    }
     .pro-grid {
+        height: 75%;
+        div {
+            section {
+                h4 {
+                    font-size: 16px;
+                }
+                i {
+                    font-size: 20px;
+                }
+            }
+        }
         .box1 {
-            width: 175px;
-            height: 175px;
+            width: 150px;
+            height: 150px;
         }
         .box2 {
-            width: 175px;
-            height: 175px;
+            width: 150px;
+            height: 150px;
     }}
+    .ski-grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    
+        div {
+            height: 100px;
+            width: 100px;
+
+            i {
+                font-size: 46;
+            }
+
+            p {
+                font-size: 17px;
+            }
+
+            &:hover {
+                i {
+                    font-size: 56;
+                }
+    
+                p {
+                    font-size: 19px;
+                }
+            }
+        }
+    }
     .about-css {
         p {
-            font-size: 14px;
+            font-size: 12px;
     }}
     .contact-css {
         div {
-            width: 275px;
+            width: 235px;
+            i {
+                font-size: 16px;
+            }
             p, a {
                 font-size: 16px;
-    }}}}
+            }
+}}}
+
+@media only screen and (max-height: 830px) {
+    h1 {
+        margin-bottom: 20px;
+    }
+}
