--- a/styles.scss
+++ b/styles.scss
@@ -248,9 +248,11 @@ h3 {
         width: 375px;
         height: 375px;
     }
-    // #rickandmorty {
-
-    // }
+    #rickandmorty {
+        background-image: url(./images/rickandmorty.png);
+        background-size: 200% 100%;
+        background-position: center;
+    }
     // #no1se {
 
     // }
@@ -373,7 +375,7 @@ h3 {
         align-content: center;
         align-items: center;
         position: relative;
-        right: 15%;
+        margin-right: 30%;
         width: 550px;
         padding: 10px 20px;
         border: 3px solid $maindark;
@@ -396,8 +398,7 @@ h3 {
 
     .right {
         position: relative;
-        left: 15%;
-        float: right;
+        margin-left: 60%;
     }
 }
 
@@ -422,10 +423,10 @@ footer {
         color:grey;
         cursor: pointer;
         background: none;
+        height: auto;
 
         &:hover {
             color: white;
-            box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.4);
         }
     }
 }
@@ -897,12 +898,12 @@ footer {
     .contact-css {
         div {
             width: 400px;
-            right: 0%;
+            margin-right: 0;
             p, a {
                 font-size: 24px;
     }}
         .right {
-            left: 0%;
+            margin-left: 0;
     }}}
 
 
@@ -1068,8 +1069,9 @@ footer {
     .contact-css {
         div {
             width: 235px;
+            height: 60px;
             i {
-                font-size: 16px;
+                font-size: 18px;
             }
             p, a {
                 font-size: 16px;
