Changed projects styling+fixed particles.js import

--- a/styles.css
+++ b/styles.css
@@ -239,18 +239,27 @@ h3 {
 }
 .pro-grid #rickandmorty {
   background-image: url(./images/rickandmorty.png);
-  background-size: 200% 100%;
+  background-size: 40% 20%;
   background-position: center;
+  background-repeat: repeat;
+}
+.pro-grid #no1se {
+  background-image: url(./images/no1se.png);
+  background-size: 40% 20%;
+  background-position: center;
+  background-repeat: repeat;
 }
 .pro-grid #gungame {
   background-image: url(./images/gungame.png);
-  background-size: 200% 100%;
+  background-size: 40% 20%;
   background-position: center;
+  background-repeat: repeat;
 }
 .pro-grid #morsecode {
   background-image: url(./images/morsecode.png);
-  background-size: 200% 100%;
+  background-size: 40% 20%;
   background-position: center;
+  background-repeat: repeat;
 }
 
 /* PAGE 3 - ABOUT */
