--- a/styles.scss
+++ b/styles.scss
@@ -200,7 +200,7 @@ h3 {
     grid-template-rows: 1fr 1fr;
     height: 80%;
 
-    div {
+    article {
         position: relative;
         margin: auto;
         background-color: black;
@@ -215,8 +215,8 @@ h3 {
             width: 70%;
             background-color: $mainlight;
             margin: auto auto;
-            border-radius: 2px;
-            border: 3px solid black;
+            border-radius: 5px;
+            border: 2px solid black;
             color: $maindark;
             text-align: center;
             justify-content: center;
@@ -225,17 +225,46 @@ h3 {
             font-size: 16px;
             font-weight: bold;
 
-            h4 {
-                font-size: 22px;
-                padding: 2px;
-                text-decoration: underline;
+            div {
+                height: 80%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                h4 {
+                    font-size: 28px;
+                    text-decoration: underline;
+                    margin-bottom: 5px;
+                }
             }
-            i {
-                font-size: 28px;
-                color: $mainaccent;
-                background-color: black;
-                padding: 5px;
-                border-radius: 5px;
+            
+            span {
+                height: 20%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                border-top: solid black 2px;
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    border-left: solid black 1px;
+                    border-right: solid black 1px;
+                    width: 100%;
+                    height: 100%;
+                    text-decoration: none;
+
+                    i {
+                        font-size: 34px;
+                        color: black;
+                        font-weight: bolder;
+
+                        &:hover {
+                            color: $mainaccent;
+                            text-shadow: 2px 1px 1px black;
+                        }
+                    }
+                }
             }
         }
     }
@@ -244,37 +273,48 @@ h3 {
         width: 325px;
         height: 325px;
     }
+
     .box2 {
         width: 375px;
         height: 375px;
     }
+
+    .single-link {
+        grid-template-columns: 1fr;
+    }
+
     #rickandmorty {
         background-image: url(./images/rickandmorty.png);
-        background-size: 40% 20%;
+        background-size: 200% 100%;
         background-position: center;
         background-repeat: repeat;
     }
+
     #no1se {
         background-image: url(./images/no1se.png);
-        background-size: 40% 20%;
+        background-size: 200% 100%;
         background-position: center;
         background-repeat: repeat;
     }
+
     // #footballteam {
 
     // }
+
     #gungame {
         background-image: url(./images/gungame.png);
-        background-size: 40% 20%;
+        background-size: 200% 100%;
         background-position: center;
         background-repeat: repeat;
     }
+
     #morsecode {
         background-image: url(./images/morsecode.png);
-        background-size: 40% 20%;
+        background-size: 200% 100%;
         background-position: center;
         background-repeat: repeat;
     }
+
     // #raptrumps {
 
     // }
@@ -544,13 +584,15 @@ footer {
         padding: 0 100px 0 30px;
     }
     .pro-grid {
-        div {
+        article {
             section {
-                h4 {
-                    font-size: 14px;
-                }
-                p {
-                    font-size: 12px;
+                div {
+                    h4 {
+                        font-size: 14px;
+                    }
+                    p {
+                        font-size: 12px;
+                    }
                 }
             }
         }
@@ -678,14 +720,23 @@ footer {
         bottom: 43%;
     }
     .pro-grid {
-        div {
+        article {
             section {
-                h4 {
-                    font-size: 12px;
+                div {
+                    h4 {
+                        font-size: 12px;
+                    }
+                    p {
+                        font-size: 10px;
+                    }
                 }
-                p {
-                    font-size: 10px;
-                }
+                span {
+                    a {
+                        i {
+                            font-size: 26;
+                        }
+                    }
+                } 
             }
         }
         .box1 {
@@ -793,16 +844,22 @@ footer {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         height: 85%;
-        div {
+        article {
             section {
-                p {
-                    display: none;
+                div {
+                    p {
+                        display: none;
+                    }
+                    h4 {
+                        font-size: 24px;
+                    }
                 }
-                h4 {
-                    font-size: 24px;
-                }
-                i {
-                    font-size: 32px;
+                span {
+                    a {
+                        i {
+                            font-size: 24px;
+                        }
+                    }
                 }
             }
         }
@@ -1023,13 +1080,19 @@ footer {
     }
     .pro-grid {
         height: 75%;
-        div {
+        article {
             section {
-                h4 {
-                    font-size: 16px;
+                div {
+                    h4 {
+                        font-size: 16px;
+                    }
                 }
-                i {
-                    font-size: 20px;
+                span {
+                    a {
+                        i {
+                            font-size: 14px;
+                        }
+                    }
                 }
             }
         }
