--- a/styles.css
+++ b/styles.css
@@ -261,32 +261,25 @@ h3 {
   width: 375px;
   height: 375px;
 }
-.pro-grid .single-link {
-  grid-template-columns: 1fr;
+.pro-grid #rickandmorty, .pro-grid #no1se, .pro-grid #footballteam, .pro-grid #gungame, .pro-grid #morsecode {
+  background-size: 200% 100%;
+  background-position: center;
+  background-repeat: repeat;
 }
 .pro-grid #rickandmorty {
   background-image: url(./images/rickandmorty.png);
-  background-size: 200% 100%;
-  background-position: center;
-  background-repeat: repeat;
 }
 .pro-grid #no1se {
   background-image: url(./images/no1se.png);
-  background-size: 200% 100%;
-  background-position: center;
-  background-repeat: repeat;
+}
+.pro-grid #footballteam {
+  background-image: url(./images/footballteams.png);
 }
 .pro-grid #gungame {
   background-image: url(./images/gungame.png);
-  background-size: 200% 100%;
-  background-position: center;
-  background-repeat: repeat;
 }
 .pro-grid #morsecode {
   background-image: url(./images/morsecode.png);
-  background-size: 200% 100%;
-  background-position: center;
-  background-repeat: repeat;
 }
 
 /* PAGE 3 - ABOUT */
