--- a/styles.scss
+++ b/styles.scss
@@ -236,6 +236,10 @@ h3 {
                     text-decoration: underline;
                     margin-bottom: 5px;
                 }
+
+                p {
+                    padding: 0 5px;
+                }
             }
             
             span {
@@ -578,10 +582,17 @@ footer {
             section {
                 div {
                     h4 {
-                        font-size: 14px;
+                        font-size: 18px;
                     }
                     p {
-                        font-size: 12px;
+                        font-size: 14px;
+                    }
+                }
+                span {
+                    a {
+                        i {
+                        font-size: 30px;
+                        }
                     }
                 }
             }
@@ -593,11 +604,8 @@ footer {
         .box2 {
             width: 325px;
             height: 325px;
-    }
-        a {
-            p {
-            font-size: 15px;
-    }}}}
+        }  
+}}
 
 
 
@@ -633,7 +641,7 @@ footer {
                 }
                 p {
                     font-size: 23px;
-    }}}}}
+}}}}}
 
 
 
@@ -671,15 +679,12 @@ footer {
         .box2 {
             width: 300px;
             height: 300px;
+        }
     }
-        a {
-            p {
-            font-size: 14px;
-    }}}
     .about-css {
         p {
             font-size: 19px;
-    }}}
+}}}
 
 
 
@@ -714,16 +719,16 @@ footer {
             section {
                 div {
                     h4 {
-                        font-size: 12px;
+                        font-size: 15px;
                     }
                     p {
-                        font-size: 10px;
+                        font-size: 11px;
                     }
                 }
                 span {
                     a {
                         i {
-                            font-size: 26;
+                            font-size: 24px;
                         }
                     }
                 } 
@@ -736,15 +741,12 @@ footer {
         .box2 {
             width: 275px;
             height: 275px;
+        }
     }
-        a {
-            p {
-            font-size: 13px;
-    }}}
     .about-css {
         p {
             font-size: 18px;
-    }}}
+}}}
 
 
 
@@ -799,15 +801,12 @@ footer {
         .box2 {
             width: 250px;
             height: 250px;
+        }
     }
-        a {
-            p {
-            font-size: 12px;
-    }}}
     .about-css {
         p {
             font-size: 17px;
-    }}}
+}}}
 
 
 
@@ -842,6 +841,7 @@ footer {
                     }
                     h4 {
                         font-size: 24px;
+                        margin-bottom: 0;
                     }
                 }
                 span {
@@ -860,11 +860,8 @@ footer {
         .box2 {
             width: 250px;
             height: 250px;
+        }
     }
-        a {
-            p {
-            font-size: 11px;
-    }}}
     footer {
         height: 50px;
         p {
@@ -943,11 +940,8 @@ footer {
         .box2 {
             width: 225px;
             height: 225px;
+        }
     }
-        a {
-            p {
-            font-size: 10px;
-    }}}
     .contact-css {
         div {
             width: 400px;
@@ -1023,11 +1017,8 @@ footer {
         .box2 {
             width: 215px;
             height: 215px;
+        }
     }
-        a {
-            p {
-            font-size: 9px;
-    }}}
     .contact-css {
         div {
             width: 375px;
