--- a/styles.scss
+++ b/styles.scss
@@ -311,6 +311,7 @@ h3 {
 
     #raptrumps {
         background-image: url(./images/raptrumps.png);
+        background-size: 130% 100%;
     }
 }
 
